# repo-validation-system

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  push-to-github.sh  pyproject.toml
.github/workflows/: nightly-benchmark.yml  validate-on-pr.yml
agents/: ab-runner-agent.md  orchestrator.md  repo-audit-agent.md
docs/: quickstart.md
scripts/: __init__.py  compare.py  report_html.py  validate.py
skills/repo-validator/: SKILL.md
skills/skill-ab-benchmark/: SKILL.md  report-template.html
specs/: metrics-schema.json  system-spec.md  verdict-criteria.md
tests/: __init__.py  test_validate.py
